--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 ><a
                   href="https://v2.info.uniswap.org/pair/0xc491405d542a393d8d202a72f0fb076447e61891
                             "
-                  ><img src="assets/uniswap-uni-logo.png" /></a
+                  ><img
+                    style="height: 100px"
+                    src="assets/uniswap-uni-logo.png" /></a
               ></span>
             </li>
             <li class="etherscan">
@@ -70,19 +72,23 @@
         <ul>
           <li>
             <span class="twitter"
-              ><a href="https://twitter.com/WHACKDtoken"
+              ><a href="https://twitter.com/PoltergeistDEX"
                 ><img src="assets/twitter.png" /></a
             ></span>
           </li>
           <li>
-            <span class="mcafeedex"
-              ><a href="https://mcafeedex.com/#WHACKD-ETH"
-                ><img src="assets/mcafeedex.png" /></a
+            <span class="uniswap"
+              ><a
+                href="https://v2.info.uniswap.org/pair/0xc491405d542a393d8d202a72f0fb076447e61891
+                          "
+                ><img
+                  style="height: 100px"
+                  src="assets/uniswap-uni-logo.png" /></a
             ></span>
           </li>
           <li class="etherscan">
             <a
-              href="https://etherscan.io/token/0xcf8335727b776d190f9d15a54e6b9b9348439eee"
+              href="https://etherscan.io/address/0xCF8335727B776d190f9D15a54E6B9B9348439eEE"
               ><img src="assets/etherscan.png"
             /></a>
           </li>
